--- a/kafka-text-consumer/pom.xml
+++ b/kafka-text-consumer/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>kafka-text-producer</artifactId>
+	<artifactId>kafka-text-consumer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>kafka-text-producer</name>
+	<name>kafka-text-consumer</name>
 	<description>Study project for Spring Boot and Kafka</description>
 	<properties>
 		<java.version>17</java.version>
@@ -48,7 +48,7 @@
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>				
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
