--- a/payment-consumer/src/main/resources/application.yml
+++ b/payment-consumer/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
-  port: 8100
+  port: ${PORT:8100}
 spring:
   kafka:
-    bootstrap-servers:
-    - localhost:29092
+    producer:
+      bootstrap-servers: ${KAFKA_HOST:localhost:29092}
